--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"C:\\Program Files\\Java\\jre1.8.0_51","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"]]
+[[{"location":"C:\\Program Files\\Java\\jre1.8.0_51","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"],[{"location":"H:\\AP CSA\\Eclipse\\Zhang_Ashley_apcsa-p3\\Unit08","type":"PROJECT","hints":{"PROJECT_NAME":"Unit08"}},"ABSENT"]]
